<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>free_fleet_examples</name>
  <version>0.1.0</version>
  <description>A package containing example maps and configs for running free fleet</description>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rmf_building_map_tools</buildtool_depend>
  <buildtool_depend>ros2run</buildtool_depend>

  <exec_depend>free_fleet</exec_depend>
  <exec_depend>free_fleet_adapter</exec_depend>
  <exec_depend>rmf_demos</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
