<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>free_fleet_rmf_adapter</name>
  <version>1.0.0</version>
  <description>Free Fleet RMF adapter</description>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>free_fleet</depend>
  <depend>rmf_traffic</depend>
  <depend>rmf_task_msgs</depend>
  <depend>rmf_traffic_ros2</depend>
  <depend>rmf_fleet_adapter</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

