<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>free_fleet_server_ros2</name>
  <version>1.0.0</version>
  <description>Free Fleet server ROS 2 wrapper</description>
  <maintainer email="mquigley@openrobotics.org">Morgan Quigley</maintainer>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache License 2.0</license>
  <author email="morgan@openrobotics.org">Morgan Quigley</author>
  <author email="aaron@openrobotics.org">Aaron Chong</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>builtin_interfaces</build_depend>
  
  <depend>rclcpp</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>free_fleet</depend>
  
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

